--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ django-heroku==0.3.1
 gunicorn==20.0.4
 Pillow==7.2.0
 psycopg2==2.8.5
+psycopg2-binary==2.8.5
 pycodestyle==2.6.0
+python-decouple==3.3
 pytz==2020.1
 sqlparse==0.3.1
 toml==0.10.1
